@@ -1,6 +1,9 @@
 package cn.van.spring.copy.mapstruct.util;
 
 import sun.misc.BASE64Encoder;
+
+import java.util.Base64;
+
 /**
  * Copyright (C), 2015-2019, 风尘博客
  * 公众号 : 风尘博客
@@ -8,14 +11,16 @@ import sun.misc.BASE64Encoder;
  *
  * @author: Van
  * Date:     2019-11-02 18:32
- * Description: 加密工具类
+ * Description: Base64 加密工具类
  * Version： V1.0
  */
 public class Base64Util {
 
     public static String encode(String str) {
-        BASE64Encoder encoder = new BASE64Encoder();
-        String encode = encoder.encode(str.getBytes());
-        return encode;
+        return Base64.getEncoder().encodeToString(str.getBytes());
+    }
+
+    public static byte[] decode(String str) {
+        return Base64.getDecoder().decode(str);
     }
 }
